new challenges layout (end)

--- a/client/app/modules/admin/challenge/templates/modal/challenge-crop-poster-modal.tpl.html
+++ b/client/app/modules/admin/challenge/templates/modal/challenge-crop-poster-modal.tpl.html
@@ -1,4 +1,4 @@
-<material-dialog>
+<material-dialog style="background-color: transparent;">
     <material-toolbar layout="horizontal" layout-align="">
         <div layout layout-align="start center">
             <div flex>Pick a poster image</div>
