--- a/client/app/modules/admin/project/templates/team.tpl.html
+++ b/client/app/modules/admin/project/templates/team.tpl.html
@@ -45,7 +45,7 @@
 
                 </div>
                 <div flex="30" class="td" ng-bind-html="applyteam.message" layout layout-align="center center"></div>
-                <div flex="20" class="td" layout layout-align="center center">{{applyteam.createDate|timeago}}</div>
+                <div flex="20" class="td" layout layout-align="center center">{{applyteam.createDate}}</div>
                 <div flex="15" class="td" layout layout-align="center center">
                     <div ng-show="applyteam.status" ><i class="fa fa-thumbs-up fa-2x"></i></div>
                     <div ng-hide="applyteam.status"  ><i class="fa fa-thumbs-down fa-2x"></i></div>
