--- a/client/app/modules/common/sass/media-queries.scss
+++ b/client/app/modules/common/sass/media-queries.scss
@@ -22,8 +22,8 @@
   material-card{
     width: 180px;
   }
-  material-dialog{
-    width:60%;
-    height: 900px;
-  }
+//  material-dialog{
+//    width:60%;
+//    height: 900px;
+//  }
 }
