--- a/client/app/modules/project/templates/modal/shareModal.tpl.html
+++ b/client/app/modules/project/templates/modal/shareModal.tpl.html
@@ -1,5 +1,6 @@
 <material-dialog>
-    <material-toolbar layout="horizontal" layout-align="start end" style="text-align:right;">
+    <material-toolbar layout="horizontal">
+        <div flex></div>
         <material-button ng-click="cancel()" class="material-button-fab">
             <i class="fa fa-times"></i>
         </material-button>
