--- a/client/app/modules/project/templates/projects-list.tpl.html
+++ b/client/app/modules/project/templates/projects-list.tpl.html
@@ -24,16 +24,13 @@
                             </div>
                             <div flex>
                             <span>
-                            {{ projects.members.length }}
+                            {{ project.members.length }}
                             </span>
                             <span>
                                 Members
                             </span>
                             </div>
                         </div>
-                        <material-button>
-                            show publication
-                        </material-button>
                     </div>
                 </article>
             </material-item-content>
