--- a/client/app/modules/admin/project/templates/modal/homePageModal.tpl.html
+++ b/client/app/modules/admin/project/templates/modal/homePageModal.tpl.html
@@ -1,16 +1,18 @@
 <material-dialog>
-    <material-toolbar layout="horizontal" layout-align="">
-        <div layout layout-align="start center">
-            <span flex>Edit your project homepage</span>
-            <material-button class="material-button-fab" ng-click="updateProject(project)">
-                <i class="fa fa-save" style="color:green;"></i>
-            </material-button>
-            <material-button class="material-button-fab">
-                <i class="fa fa-times" ng-click="cancel()"></i>
-            </material-button>
-        </div>
-    </material-toolbar>
-    <material-content>
-        <textarea ui-tinymce="tinymceOptions" ng-model="project.home" ></textarea>
-    </material-content>
+    <form name="formHome" ng-submit="updateProject(project)">
+        <material-toolbar>
+            <div class="material-toolbar-tools">
+                <span flex>Edit your project homepage</span>
+                <material-button ng-disabled="formHome.$invalid" type="submit" class="material-button-fab">
+                    <i class="fa fa-save"></i>
+                </material-button>
+                <material-button class="material-button-fab">
+                    <i class="fa fa-times" ng-click="cancel()"></i>
+                </material-button>
+            </div>
+        </material-toolbar>
+        <material-content>
+            <textarea name="home" required ui-tinymce="tinymceOption" ng-model="project.home"></textarea>
+         </material-content>
+    </form>
 </material-dialog>
