--- a/client/app/modules/common/sass/material-redesign.scss
+++ b/client/app/modules/common/sass/material-redesign.scss
@@ -73,14 +73,6 @@ material-card{
 }
 
 
-
-.material-sidenav-right, .material-sidenav-left{
-  background-color: $material-card-background !important;
-  z-index :25 !important;
-}
-
-
-
 material-toast{
   min-height : $headerHeight !important;
   z-index:100;
@@ -98,8 +90,8 @@ material-ink-bar{
 }
 
 material-dialog{
-  width:90%;
-  height : 300px;
+//  width:90%;
+//  height : 300px;
   material-toolbar{
     border-bottom:solid 1px black;
   }
@@ -119,10 +111,8 @@ material-dialog{
   }
 }
 
-.material-sidenav-left{
-//  padding-left: 20px;
-}
-.material-sidenav-right.open,.material-sidenav-right.open{
+
+.material-sidenav-right.open,.material-sidenav-left.open{
   z-index:25 !important;
 }
 
