--- a/client/app/modules/home/sass/home.scss
+++ b/client/app/modules/home/sass/home.scss
@@ -1,19 +1,3 @@
-#services {
-  background-color: rgba(98,193,193,1);
-  color: #ffffff;
-}
-#services .fa {
-  border: 2px solid #FFFFFF;
-  border-radius: 50%;
-  display: inline-block;
-  font-size: 60px;
-  height: 140px;
-  line-height: 140px;
-  text-align: center;
-  vertical-align: middle;
-  width: 140px;
-}
-
 .list-carousel-challenge{
   //  -webkit-filter: blur(5px); -moz-filter: blur(5px); -ms-filter: blur(5px); -o-filter: blur(5px); filter: blur(5px);
   width : 100%;
@@ -22,20 +6,22 @@
   //  background-position: top left;
 }
 
+.carousel-home{
+  height: 100%;
+  background-color:rgb(21,38,97);
+  padding-left:20px;
+  padding-right:20px;
+  color:white;
+}
+
 .carousel-body{
   height: 100%;
 }
 
 .rn-carousel-control{
   color : black !important;
+  opacity: 0.7 !important;
   font-size : 5em !important;
-}
-
-.rn-carousel-indicator{
-  height: 50px !important;
-  //  z-index: 100;
-  bottom : 20px;
-  background-color: #c9c9c9;
 }
 
 .home-project-container{
@@ -43,5 +29,8 @@
   margin-bottom: 20px;
 }
 
-
+#carousel-1{
+  height: 100%;
+  width:100%!important;
+}
 
