--- a/client/app/modules/home/sass/home.scss
+++ b/client/app/modules/home/sass/home.scss
@@ -1,36 +1,22 @@
-.list-carousel-challenge{
-  //  -webkit-filter: blur(5px); -moz-filter: blur(5px); -ms-filter: blur(5px); -o-filter: blur(5px); filter: blur(5px);
-  width : 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  //  background-position: top left;
+
+.my-carousel{
+  height: 100%!important;
+}
+
+#carousel-1{
+  height: 100%!important;
 }
 
 .carousel-home{
-  height: 100%;
   background-color:rgb(21,38,97);
-  padding-left:20px;
-  padding-right:20px;
+  padding:20px;
   color:white;
-}
 
-.carousel-body{
-  height: 100%;
 }
 
 .rn-carousel-control{
   color : black !important;
   opacity: 0.7 !important;
   font-size : 5em !important;
-}
-
-.home-project-container{
-  margin-top : 20px;
-  margin-bottom: 20px;
-}
-
-#carousel-1{
-  height: 100%;
-  width:100%!important;
 }
 
