--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -317,33 +317,21 @@ material-tabs {
   border: 1.5px #828282 dashed;
   height: 300px; }
 
-.list-carousel-challenge {
-  width: 100%;
-  background-repeat: no-repeat;
-  background-size: cover; }
+.my-carousel {
+  height: 100% !important; }
+
+#carousel-1 {
+  height: 100% !important; }
 
 .carousel-home {
-  height: 100%;
   background-color: #152661;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 20px;
   color: white; }
-
-.carousel-body {
-  height: 100%; }
 
 .rn-carousel-control {
   color: black !important;
   opacity: 0.7 !important;
   font-size: 5em !important; }
-
-.home-project-container {
-  margin-top: 20px;
-  margin-bottom: 20px; }
-
-#carousel-1 {
-  height: 100%;
-  width: 100% !important; }
 
 .d3-tag {
   -webkit-transition: font-size 0.3s ease-in-out;
@@ -423,9 +411,6 @@ header {
   font-size: 1.1em; }
 
 @media all and (min-width: 700px) {
-  .carousel-home {
-    padding-left: 10%;
-    padding-right: 10%; }
   .sidenav-container {
     width: 350px; }
   .project-modal {
