--- a/client/app/modules/home/templates/home.tpl.html
+++ b/client/app/modules/home/templates/home.tpl.html
@@ -115,7 +115,7 @@
         </div>
         <material-checkbox name="read" required>
             <small>
-                i have read the terms of services
+                I have read the terms of service
             </small>
         </material-checkbox>
         <div ng-messages="signupForm.read.$error" ng-if="!signupForm.passwordR.$pristine">
