--- a/client/app/modules/challenge/templates/challenge.tpl.html
+++ b/client/app/modules/challenge/templates/challenge.tpl.html
@@ -45,7 +45,7 @@
             </article>
             <div class="participate-btn">
                 <material-button  ng-if="currentUser"  ng-click="participate()" class="material-button-raised material-button-colored">
-                    Participate to this challenge
+                    Participate in this challenge
                 </material-button>
             </div>
         </section>
